@@ -148,6 +148,12 @@
       <artifactId>jersey-test-framework-core</artifactId>
     </dependency>
 
+    <!-- jersey media multipart for file upload -->
+    <dependency>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-multipart</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -258,6 +264,7 @@
   <properties>
     <jersey.version>2.10.1</jersey.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <argLine>-Xms2048m -Xmx2048m -XX:MaxPermSize=512m</argLine>
   </properties>
 
   <reporting>
@@ -274,7 +281,16 @@
             <version>5.6.6</version>
           </docletArtifact>
           <additionalparam>-inferrel -inferdep -qualify -hide "java.*" -collpackages java.util.*</additionalparam>
-        </configuration>
+        </configuration>        
+        <reportSets>
+          <reportSet>
+            <id>default</id>
+            <reports>
+              <report>javadoc</report>
+              <!-- exclude test-javadoc -->
+            </reports>
+          </reportSet>
+        </reportSets>
       </plugin>
     </plugins>
   </reporting>
